Add InlineDiffTextBlock control for character-level diff highlighting and enhance DiffLine model with segments

--- a/src/Diffy/Views/MainWindow.axaml
+++ b/src/Diffy/Views/MainWindow.axaml
@@ -2,6 +2,7 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:vm="using:Diffy.ViewModels"
         xmlns:models="using:Diffy.Models"
+        xmlns:controls="using:Diffy.Controls"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         mc:Ignorable="d" d:DesignWidth="1200" d:DesignHeight="800"
@@ -103,11 +104,10 @@
                                                    FontSize="12"
                                                    HorizontalAlignment="Right"
                                                    Margin="0,0,10,0"/>
-                                        <TextBlock Grid.Column="1" 
-                                                   Text="{Binding Text}" 
+                                        <controls:InlineDiffTextBlock Grid.Column="1" 
+                                                   DiffLine="{Binding}" 
                                                    FontFamily="Consolas, Courier New, monospace"
-                                                   FontSize="12"
-                                                   TextWrapping="NoWrap"/>
+                                                   FontSize="12"/>
                                     </Grid>
                                 </Border>
                             </DataTemplate>
@@ -161,11 +161,10 @@
                                                    FontSize="12"
                                                    HorizontalAlignment="Right"
                                                    Margin="0,0,10,0"/>
-                                        <TextBlock Grid.Column="1" 
-                                                   Text="{Binding Text}" 
+                                        <controls:InlineDiffTextBlock Grid.Column="1" 
+                                                   DiffLine="{Binding}" 
                                                    FontFamily="Consolas, Courier New, monospace"
-                                                   FontSize="12"
-                                                   TextWrapping="NoWrap"/>
+                                                   FontSize="12"/>
                                     </Grid>
                                 </Border>
                             </DataTemplate>
